# slice

./: CMakeLists.txt  README.md  slice.h  slice_test.cpp
.github/workflows/: cpp.yaml
